feat: complete payment flow and sync ECC workspace